--- a/index.css
+++ b/index.css
@@ -8,11 +8,13 @@ body {
   height: 100vh;
   width: 100vw;
   /* your properties here */
+  display: grid;
 }
 
 .grid-item {
   background-color: grey;
   border: 1px solid black;
+  grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr;
 }
 
 /* add the .bigItem class */
